force-app/main/default/objects/Opportunity/fields/Company_Entity__c.field-meta.xml
<CustomField>
    <fullName>Company_Entity__c</fullName>
    <label>Company Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Terrain Water</fullName>
            </value>
            <value>
                <fullName>Terrain Elements</fullName>
            </value>
            <value>
                <fullName>Terrain Assist</fullName>
            </value>
            <value>
                <fullName>Street Furniture Australia</fullName>
            </value>
            <value>
                <fullName>MODUS Toilet Building</fullName>
            </value>
            <value>
                <fullName>Spare Parts</fullName>
            </value>
            <value>
                <fullName>Italian Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>