force-app/main/default/objects/Opportunity/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <label>Job Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>