force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Freight cost</fullName>
            </value>
            <value>
                <fullName>Product Unsuitable</fullName>
            </value>
            <value>
                <fullName>Alternative product sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>