force-app/main/default/objects/Opportunity/fields/Sale_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Sale_Breakdown__c</fullName>
    <label>Sale Breakdown</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Company_Entity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Table Settings</fullName>
            </value>
            <value>
                <fullName>Bollards</fullName>
            </value>
            <value>
                <fullName>Drink Fountains</fullName>
            </value>
            <value>
                <fullName>Bike Racks</fullName>
            </value>
            <value>
                <fullName>Custom made</fullName>
            </value>
            <value>
                <fullName>Seats</fullName>
            </value>
            <value>
                <fullName>Benches</fullName>
            </value>
            <value>
                <fullName>Bin Enclosures</fullName>
            </value>
            <value>
                <fullName>Shelters</fullName>
            </value>
            <value>
                <fullName>Works Contract</fullName>
            </value>
            <value>
                <fullName>General supply water products</fullName>
            </value>
            <value>
                <fullName>Tree Guards &amp; Grates</fullName>
            </value>
            <value>
                <fullName>Standard Toilet buildings</fullName>
            </value>
            <value>
                <fullName>Custom Toilet Buildings</fullName>
            </value>
            <value>
                <fullName>Barbecue</fullName>
            </value>
            <value>
                <fullName>Spare Parts</fullName>
            </value>
            <value>
                <fullName>Restroom</fullName>
            </value>
            <value>
                <fullName>Sales Breakdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>