force-app/main/default/objects/Opportunity/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supply only</fullName>
            </value>
            <value>
                <fullName>Supply &amp; installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>