force-app/main/default/objects/Opportunity/validationRules/Closing_a_sale.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_a_sale</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL( StageName , &quot;Closed Won&quot;), ISBLANK(TEXT( Company_Entity__c )))</errorConditionFormula>
    <errorDisplayField>Company_Entity__c</errorDisplayField>
    <errorMessage>Please select from sales type</errorMessage>
</ValidationRule>