force-app/main/default/objects/Opportunity/validationRules/Sale_Breakdown_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Sale_Breakdown_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Company_Entity__c , &quot;Terrain Elements&quot;)
&amp;&amp;
ISBLANK(  Sale_Breakdown__c )</errorConditionFormula>
    <errorDisplayField>Sale_Breakdown__c</errorDisplayField>
    <errorMessage>Sale Breakdown is Mandatory when Sale Type is Terrain Elements</errorMessage>
</ValidationRule>