force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Company_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>